@@ -52,7 +52,8 @@ AC_CHECK_HEADERS(stdio.h stdlib.h string.h unistd.h netdb.h signal.h \
   sys/resource.h pthread.h windows.h process.h conio.h sys/wait.h regex.h \
   stdarg.h winsock2.h pdh.h psapi.h sys/sem.h sys/ipc.h sys/shm.h Winldap.h \
   sys/timeb.h Winber.h lber.h ws2tcpip.h inttypes.h sys/file.h grp.h \
-  net/if_mib.h sys/user.h sys/ucontext.h libperfstat.h devstat.h)
+  net/if_mib.h sys/user.h sys/ucontext.h libperfstat.h devstat.h \
+  arpa/nameser_compat.h)
 
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
@@ -68,9 +69,9 @@ AC_SEARCH_LIBS(socket, socket)
 #Solaris SNMP requires this
 AC_SEARCH_LIBS(kstat_open, kstat)
 AC_SEARCH_LIBS(gethostbyname, nsl)
-AC_SEARCH_LIBS(__res_query, resolv bind socket)
+#AC_SEARCH_LIBS(__res_query, resolv bind socket)
 #Solaris 8 requires this. It does not have symbol __res_query.
-AC_SEARCH_LIBS(res_query, resolv bind socket)
+#AC_SEARCH_LIBS(res_query, resolv bind socket)
 #Aix 6.x requires this
 AC_SEARCH_LIBS(perfstat_memory_total, perfstat, [AC_DEFINE([HAVE_LIBPERFSTAT], 1, [Define to 1 if you have the 'libperfstat' library (-lperfstat)])])
 AC_SEARCH_LIBS(devstat_getdevs, devstat, [AC_DEFINE([HAVE_DEVSTAT], 1, [Define to 1 if you have the 'libdevstat' library (-ldevstat)])])
@@ -79,46 +80,13 @@ AC_CHECK_LIB(m, main)
 AC_CHECK_LIB(kvm, main)
 dnl AC_CHECK_LIB(pthread, main)
 
-dnl Check for function res_query
-AC_MSG_CHECKING(for function res_query)
-AC_TRY_COMPILE(
-[
-#ifdef HAVE_SYS_TYPES_H
-#include <sys/types.h>
-#endif /* HAVE_SYS_TYPES_H */
-
-#ifdef HAVE_NETINET_IN_H
-#include <netinet/in.h>
-#endif /* HAVE_NETINET_IN_H */
-
-#ifdef HAVE_ARPA_NAMESER_H
-#include <arpa/nameser.h>
-#endif /* HAVE_ARPA_NAMESER_H */
-
-#ifdef HAVE_RESOLV_H
-#include <resolv.h>
-#endif /* HAVE_RESOLV_H */
-
-#if !defined(C_IN)
-#       define C_IN     ns_c_in
-#endif /* C_IN */
-
-#if !defined(T_ANY)
-#       define T_SOA    ns_t_any
-#endif /* T_ANY */
-],
-[
-	char zone[1024];
-	unsigned char respbuf[1024];
-
-	if (!(_res.options & RES_INIT))
-		res_init();
-	res_query(zone, C_IN, T_SOA, respbuf, sizeof(respbuf));
-],
-AC_DEFINE(HAVE_RES_QUERY, 1 ,[Define to 1 if function 'res_query' exist.])
-AC_MSG_RESULT(yes),
-AC_MSG_RESULT(no))
-
+found_resolv="no"
+dnl Check for DNS lookup functions
+LIBRESOLV_CHECK_CONFIG([no])
+if test "x$found_resolv" != "xyes"; then
+	AC_MSG_ERROR([Unable to DNS lookup functions "${found_resolv}"])
+fi
+LIBS="${LIBS} ${RESOLV_LIBS}"
 
 dnl Check for union semun
 AC_MSG_CHECKING(for union semun)
