@@ -1,5 +1,6 @@
 Changes for 1.8.1
 
+ - [ZBX-479] fixed compilation of ZABBIX agent under Mac OS/X (Sasha)
  - [ZBX-1385] proxy list in host configuration form is now sorted (Vedmak)
  - [ZBX-1560] fixed type in application api class call (Vedmak)
  - [ZBX-1286] Zabbix handles some specified types of errors instead of Windows system, no dialog boxes pop up (Dmitry)
